# surreal-thing

./: .envrc  Cargo.toml  README.md  history.txt  sqlx-notes.md
schemas/: new_table_migration.surql  script_migration.surql
scripts/: init_db.sh
src/: db.rs  error.rs  lib.rs  main.rs  person.rs  telemetry.rs  types.rs
src/api/: mod.rs  person.rs  person_qry.rs
src/surreal/: db.rs
tests/: endpoints.rs  queries.rs
