[package]
name = "surreal-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
axum-macros = "0.3.7"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
surrealdb = { git = "https://github.com/surrealdb/surrealdb/", branch = "main" }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
