[package]
name = "surreal-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
axum-macros = "0.3.7"
color-eyre = "0.6.2"
hyper = { version = "0.14.26", features = ["full"] }
once_cell = "1.17.1"
serde = { version = "1.0.163", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.96"
surrealdb = { git = "https://github.com/surrealdb/surrealdb/", branch = "main" }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry", "json"] }
uuid = { version = "1.3.3", features = ["v4"] }

[dependencies.reqwest]
version = "0.11.18"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
minreq = { version = "2.8.1", features = ["json-using-serde"] }
serial_test = "2.0.0"


